<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/car_picture"
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    tools:srcCompat="@drawable/no_photo" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/add_car_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/add_car_place"
                    android:inputType="textPersonName"
                    android:selectAllOnFocus="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_8sdp"
                android:gravity="start"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/car_brand"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/brandSpinner"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:fadingEdge="horizontal|vertical">

                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_8sdp"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/car_seat_numer"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/seatNumberSpinner"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1">

                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_8sdp"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fuel_type"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/fuelTypeSpinner"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1">

                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_8sdp"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/car_size"
                    android:textSize="18sp" />

                <Spinner

                    android:id="@+id/carSizeSpinner"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1">

                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_8sdp"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/car_status"
                    android:textSize="18sp" />

                <Spinner

                    android:id="@+id/statusSpinner"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1">

                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_8sdp"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/car_transmission"
                    android:textSize="18sp" />

                <Spinner

                    android:id="@+id/transmissionSpinner"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1">

                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/car_model_hint"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/car_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_weight="1"
                    android:hint="@string/car_model_hint"
                    android:inputType="text"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/car_milage"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/carMilage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_weight="1"
                    android:hint="@string/car_milage"
                    android:inputType="number"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/car_description_hint"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/car_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_weight="1"
                    android:hint="@string/car_description_hint"
                    android:inputType="text"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/car_price"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/carPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_weight="1"
                    android:hint="@string/car_price"
                    android:inputType="number"
                    android:textSize="18sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/carImageBar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:id="@+id/makeCar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/sign_up" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>