<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.abdelrahmanapps.carrentaltrial.BookingActivity"
    tools:showIn="@layout/activity_booking">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/book_now"
            android:layout_alignParentTop="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/car_image"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_200sdp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop" />

                </FrameLayout>

                <TextView
                    android:id="@+id/booking_car_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:text="BMW 7 SERIES"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_12sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pick_up_location"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/_12sdp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="@dimen/_8sdp"
                            android:contentDescription="@string/app_name"
                            android:scaleType="centerCrop"
                            android:src="@drawable/date" />

                        <TextView
                            android:id="@+id/pick_up_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/_16sdp" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:text="Return to same location"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/_12sdp" />

                        <Switch
                            android:id="@+id/same_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="@dimen/_8sdp" />

                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:layout_marginBottom="@dimen/_12sdp"
                        android:background="@color/colorBorder" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <com.example.abdelrahmanapps.carrentaltrial.customviews.DateBlock
                                android:id="@+id/pick_up_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                            </com.example.abdelrahmanapps.carrentaltrial.customviews.DateBlock>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <com.example.abdelrahmanapps.carrentaltrial.customviews.DateBlock
                                android:id="@+id/destination_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                            </com.example.abdelrahmanapps.carrentaltrial.customviews.DateBlock>

                        </LinearLayout>


                    </LinearLayout>


                </LinearLayout>


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    app:cardElevation="@dimen/_2sdp"
                    app:cardUseCompatPadding="true">

                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    app:cardElevation="@dimen/_2sdp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_12sdp"
                            android:layout_marginBottom="@dimen/_6sdp"
                            android:paddingLeft="@dimen/_12sdp"
                            android:paddingRight="@dimen/_12sdp"
                            android:text="Booking Price"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/_13sdp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:layout_marginTop="@dimen/_6sdp"
                            android:layout_marginBottom="@dimen/_4sdp"
                            android:background="@color/colorBorder" />

                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_12sdp"
                            android:stretchColumns="*">

                            <TableRow
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:paddingTop="@dimen/_8sdp"
                                android:paddingBottom="@dimen/_8sdp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/daily_price"
                                    android:textColor="@color/colorBlack" />

                                <TextView
                                    android:id="@+id/book_daily_price"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="right"
                                    android:textColor="@color/colorBlack" />

                            </TableRow>

                            <TableRow
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:paddingTop="@dimen/_8sdp"
                                android:paddingBottom="@dimen/_8sdp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/extra_hours"
                                    android:textColor="@color/colorBlack" />

                                <TextView
                                    android:id="@+id/extra_hour"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="right"
                                    android:textColor="@color/colorBlack" />

                            </TableRow>

                            <TableRow
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:paddingTop="@dimen/_8sdp"
                                android:paddingBottom="@dimen/_8sdp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/total_amount"
                                    android:textColor="@color/colorBlack" />

                                <TextView
                                    android:id="@+id/total_amount"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="right"
                                    android:text=" "
                                    android:textColor="@color/colorBlack" />

                            </TableRow>

                        </TableLayout>

                    </LinearLayout>
                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    app:cardElevation="@dimen/_2sdp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_12sdp"
                            android:layout_marginBottom="@dimen/_6sdp"
                            android:paddingLeft="@dimen/_12sdp"
                            android:paddingRight="@dimen/_12sdp"
                            android:text="Customer Details"
                            android:textColor="@color/colorBlack"
                            android:textSize="@dimen/_13sdp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:layout_marginTop="@dimen/_6sdp"
                            android:layout_marginBottom="@dimen/_4sdp"
                            android:background="@color/colorBorder" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingLeft="@dimen/_12sdp"
                            android:paddingRight="@dimen/_12sdp"
                            android:paddingBottom="@dimen/_12sdp">

                            <TextView
                                android:id="@+id/customer_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorBlack" />

                            <TextView
                                android:id="@+id/customer_address"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_12sdp"
                                android:textColor="@color/colorBlack" />

                            <TextView
                                android:id="@+id/customer_phone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_12sdp"
                                android:textColor="@color/colorBlack" />

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>


            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/book_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorAccent"
            android:padding="@dimen/_16sdp"
            android:text="Continue Booking"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14sdp" />

    </RelativeLayout>

</LinearLayout>
